# quickdrop

./: .gitignore  Cargo.toml  README.md
android/: .gitignore  settings.gradle.kts
android/app/: build.gradle.kts
android/app/release/: output-metadata.json
android/app/release/baselineProfiles/0/: app-release.dm
android/app/release/baselineProfiles/1/: app-release.dm
android/app/src/androidTest/java/com/example/quickdrop/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/quickdrop/: AppSettings.kt  CryptoUtils.kt  DiscoveryManager.kt  Handshake.kt  IdentityManager.kt  MainActivity.kt  MainViewModel.kt  Models.kt  Protocol.kt  SessionManager.kt  SettingsScreen.kt  Transfer.kt  TrustManager.kt  UdpDiscoveryManager.kt  WifiDirectManager.kt  WifiServiceManager.kt
android/app/src/main/java/com/example/quickdrop/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/res/drawable/: ic_launcher_background.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/java/com/example/quickdrop/: ExampleUnitTest.kt
android/gradle/wrapper/: gradle-wrapper.properties
backend/: .gitignore  Cargo.toml
backend/src/: ble.rs  crypto.rs  handshake.rs  identity.rs  lib.rs  protocol.rs  session.rs  state.rs  transfer.rs  udp.rs
frontend/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: app.css  app.html
frontend/src-tauri/: .gitignore  Cargo.toml  installer-hooks.nsh  share_settings.json  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/lib/: stores.ts  tauri.ts  types.ts  utils.ts
frontend/src/routes/: +layout.svelte  +page.svelte  layout.css  page.css
frontend/src/routes/devices/: +page.svelte  page.css
frontend/src/routes/send/: +page.svelte  page.css
frontend/src/routes/settings/: +page.svelte  page.css
landing/: README.md  download.html  index.html  script.js  styles.css
src/: crypto.rs  handshake.rs  identity.rs  main.rs  protocol.rs  session.rs  transfer.rs
