[package]
name = "share"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.22.1"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
hex = "0.4.3"
hkdf = "0.12.4"
local-ip-address = "0.6.10"
rand = "0.8.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
