[package]
name = "quickdrop"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8.4"
aes-gcm = "0.10.3"
base64 = "0.22.1"
btleplug = "0.12.0"
ctr = "0.9.2"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
futures = "0.3.32"
hex = "0.4.3"
hkdf = "0.12.4"
local-ip-address = "0.6.10"
rand = "0.8.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
socket2 = "0.5"
tokio = { version = "1.50.0", features = ["full"] }
uuid = { version = "1.22.0", features = ["v4"] }
windows = { version = "0.62.2", features = ["Devices_Bluetooth", "Devices_WiFiDirect", "Devices_Enumeration", "Networking", "Devices_Bluetooth_GenericAttributeProfile", "Devices_Bluetooth_Advertisement", "Foundation", "Security_Cryptography"] }

[profile.dev.package."*"]
opt-level = 3
