[package]
name = "quickdrop-app"
version = "0.1.0"
description = "A p2p file transfer app"
authors = ["havok"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "quickdrop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quickdrop = { path = "../../backend" }
local-ip-address = "0.6.10"
dirs = "5.0.1"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
rand = "0.8.0"
tokio = { version = "1.50.0", features = ["full"] }
uuid = { version = "1.22.0", features = ["v4"] }

[profile.dev.package."*"]
opt-level = 3
